--- a/public/register.html
+++ b/public/register.html
@@ -165,8 +165,6 @@
           <div class="col-md-9 register-form-col">
             <form
               id="registrationForm"
-              action="https://www.anshinfotech.org/api/register"
-              method="POST"
             >
               <div class="row justify-content-center gap-0">
                 <div class="col-md-4 register-input-group">
@@ -175,6 +173,7 @@
                     class="register-input"
                     placeholder="Your Name"
                     name="name"
+                    id="name"
                     required
                   />
                 </div>
@@ -184,6 +183,7 @@
                     class="register-input"
                     placeholder="Father's Name"
                     name="father_name"
+                    id="father_name"
                     required
                   />
                 </div>
@@ -193,6 +193,7 @@
                     class="register-input"
                     placeholder="Mother's Name"
                     name="mother_name"
+                    id="mother_name"
                     required
                   />
                 </div>
@@ -204,6 +205,7 @@
                     class="register-input"
                     placeholder="Contact Number"
                     name="contactNumber"
+                    id="contactNumber"
                     required
                   />
                 </div>
@@ -213,6 +215,7 @@
                     class="register-input"
                     placeholder="Alternate Contact Number"
                     name="alternateContactNumber"
+                    id="alternateContactNumber"
                     required
                   />
                 </div>
@@ -222,6 +225,7 @@
                     class="register-input"
                     placeholder="Email"
                     name="email"
+                    id="email"
                     required
                   />
                 </div>
@@ -233,6 +237,7 @@
                     class="register-input"
                     placeholder="College Name"
                     name="collegeName"
+                    id="collegeName"
                     required
                   />
                 </div>
@@ -242,6 +247,7 @@
                     class="register-input"
                     placeholder="Branch"
                     name="branch"
+                    id="branch"
                     required
                   />
                 </div>
@@ -251,6 +257,7 @@
                     class="register-input"
                     placeholder="Semester"
                     name="semester"
+                    id="semester"
                     required
                   />
                 </div>
@@ -544,6 +551,7 @@
                     class="register-input"
                     placeholder="City"
                     name="city"
+                    id="city"
                     required
                   />
                 </div>
@@ -577,7 +585,7 @@
                 <div class="col-md-4">
                   <select
                     name="trainingMethod"
-                    id="trainingPeriod"
+                    id="trainingMethod"
                     class="register-input"
                     required
                   >
@@ -691,24 +699,26 @@
             },
             body: JSON.stringify({
               // Include your form data here
-              name: document.getElementsByName("name")[0].value,
-              father_name: document.getElementsByName("father_name")[0].value,
-              mother_name: document.getElementsByName("mother_name")[0].value,
+              name: document.getElementById("name").value,
+              father_name: document.getElementById("father_name").value,
+              mother_name: document.getElementById("mother_name").value,
               contactNumber:
-                document.getElementsByName("contactNumber")[0].value,
-              alternateContactNumber: document.getElementsByName(
+                document.getElementById("contactNumber").value,
+              alternateContactNumber: document.getElementById(
                 "alternateContactNumber"
-              )[0].value,
-              email: document.getElementsByName("email")[0].value,
-              collegeName: document.getElementsByName("collegeName")[0].value,
-              branch: document.getElementsByName("branch")[0].value,
-              semester: document.getElementsByName("semester")[0].value,
-              country: document.getElementsByName("country")[0].value,
-              state: document.getElementsByName("state")[0].value,
-              city: document.getElementsByName("city")[0].value,
-              course: document.getElementsByName("course")[0].value,
+              ).value,
+              email: document.getElementById("email").value,
+              collegeName: document.getElementById("collegeName").value,
+              branch: document.getElementById("branch").value,
+              semester: document.getElementById("semester").value,
+              country: document.getElementById("country").value,
+              state: document.getElementById("state").value,
+              city: document.getElementById("city").value,
+              course: document.getElementById("course").value,
+              OtherState:document.getElementById("other").value,
+              trainingMethod: document.getElementById("trainingMethod").value,
               trainingPeriod:
-                document.getElementsByName("trainingPeriod")[0].value,
+                document.getElementById("trainingPeriod").value,
             }),
           })
             .then((response) => response.json())
@@ -716,6 +726,7 @@
               // Check if the registration was successful
               if (data._id) {
                 // Registration successful
+                console.log(data);
                 alert("Registration successful!");
                 window.location.reload()
                 // You can redirect or perform additional actions here
