--- a/public/admin.html
+++ b/public/admin.html
@@ -771,7 +771,7 @@
         }
       }
       function displayRegisterations(registers) {
-        const registerationsBody = document.getElementById("registeraionsBody");
+        const registerationsBody = document.getElementById("registerationsBody");
         registerationsBody.innerHTML = "";
         registers.forEach((register) => {
           const row = document.createElement("tr");
