Update index.html test

--- a/public/index.html
+++ b/public/index.html
@@ -880,7 +880,7 @@
               <span>&copy;Copyright ANSH InfoTech. All Rights Reserved</span>
             </div>
             <div class="col-md-3 copy-col">
-              <a href="https://www.facebook.com/anshinfotech.co.in/">
+              <a href="https://www.facebook.com/">
                 <i class="fab fa-facebook"> </i>
               </a>
               <a href="https://www.instagram.com/anshinfotech/">
