--- a/public/admin.html
+++ b/public/admin.html
@@ -42,7 +42,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css"
+      rel="stylesheet"
+    />
     <style>
       /* Add your CSS styles for the table here */
       .review-cell {
@@ -58,7 +61,9 @@
       #contactTable,
       #enquiryTable,
       #employee,
-      #employeeTable,#registerations,#addblogs {
+      #employeeTable,
+      #registerations,
+      #addblogs {
         display: none;
       }
       .nav-item .nav-link:hover {
@@ -516,24 +521,43 @@
           <form id="handleAddBlog">
             <div class="mb-3">
               <label for="title" class="form-label">Title</label>
-              <input type="text" class="form-control" id="title" placeholder="Enter blog title" required/>
+              <input
+                type="text"
+                class="form-control"
+                id="title"
+                placeholder="Enter blog title"
+                required
+              />
             </div>
-  
+
             <div class="mb-3">
               <label for="photo" class="form-label">Photo URL</label>
-              <input type="text" class="form-control" id="photo" placeholder="Enter photo URL" required/>
+              <input
+                type="text"
+                class="form-control"
+                id="photo"
+                placeholder="Enter photo URL"
+                required
+              />
             </div>
-  
+
             <div class="mb-3">
               <label for="description" class="form-label">Description</label>
-              <input type="text" class="form-control" id="description" placeholder="Enter a brief description" required/>
+              <input
+                type="text"
+                class="form-control"
+                id="description"
+                placeholder="Enter a brief description"
+                required
+              />
             </div>
-  
+
             <div class="mb-3">
               <label for="content" class="form-label">Content</label>
-              <div id="content"></div> <!-- Quill editor will be placed here -->
+              <div id="content"></div>
+              <!-- Quill editor will be placed here -->
             </div>
-  
+
             <button type="submit" class="btn btn-primary">Add Blog</button>
           </form>
         </div>
@@ -807,7 +831,8 @@
         }
       }
       function displayRegisterations(registers) {
-        const registerationsBody = document.getElementById("registerationsBody");
+        const registerationsBody =
+          document.getElementById("registerationsBody");
         registerationsBody.innerHTML = "";
         registers.forEach((register) => {
           const row = document.createElement("tr");
@@ -1089,47 +1114,53 @@
           }
         });
     </script>
-      <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-      <script>
-        // Initialize Quill editor
-        const quill = new Quill("#content", {
-          theme: "snow",
-          placeholder: "Write your blog content here...",
-          modules: {
-            toolbar: [
-              [{ header: [1, 2, false] }],
-              ["bold", "italic", "underline"],
-              ["link", "blockquote", "code-block"],
-              [{ list: "ordered" }, { list: "bullet" }],
-              [{ indent: "-1" }, { indent: "+1" }],
-              [{ align: [] }],
-              ["clean"],
-            ],
-          },
-        });
-  
-        document.getElementById("handleAddBlog").addEventListener("submit", (e) => {
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+    <script>
+      // Initialize Quill editor
+      const quill = new Quill("#content", {
+        theme: "snow",
+        placeholder: "Write your blog content here...",
+        modules: {
+          toolbar: [
+            [{ color: [] }],
+            [{ header: [1, 2, false] }],
+            ["bold", "italic", "underline"],
+            ["link", "blockquote", "code-block"],
+            [{ list: "ordered" }, { list: "bullet" }],
+            [{ indent: "-1" }, { indent: "+1" }],
+            [{ align: [] }],
+            ["clean"],
+          ],
+        },
+      });
+
+      document
+        .getElementById("handleAddBlog")
+        .addEventListener("submit", (e) => {
           e.preventDefault();
           let title = document.getElementById("title").value;
           let photo = document.getElementById("photo").value;
           let description = document.getElementById("description").value;
           let content = quill.root.innerHTML; // Get the HTML content from Quill editor
-  
+
           const addBlog = async () => {
             try {
-              const data = await fetch("https://www.anshinfotech.org/api/blog", {
-                method: "POST",
-                headers: {
-                  "Content-Type": "application/json",
-                },
-                body: JSON.stringify({
-                  title,
-                  photo,
-                  description,
-                  content,
-                }),
-              });
-  
+              const data = await fetch(
+                "https://www.anshinfotech.org/api/blog",
+                {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({
+                    title,
+                    photo,
+                    description,
+                    content,
+                  }),
+                }
+              );
+
               const blogdata = await data.json();
               console.log(blogdata);
             } catch (error) {
@@ -1138,7 +1169,7 @@
           };
           addBlog();
         });
-      </script>
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
