Learnex Logo Added

--- a/public/index.html
+++ b/public/index.html
@@ -809,6 +809,15 @@
               width=""
             />
           </div>
+          <div class="item" style="height: 50px">
+            <img
+              src="./images/learnexLogo.png"
+              alt="not-found"
+              class="img-fluid client-img"
+              height=""
+              width=""
+            />
+          </div>
         </div>
       </div>
     </div>
