--- a/public/index.html
+++ b/public/index.html
@@ -121,31 +121,29 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a
-                  class="nav-link text-dark"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="about.html">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link text-dark">FaQ's</a>
+                <a href="FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link text-dark"
+                <a href="training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link text-dark">Register</a>
+                <a href="Blogs.html" class="nav-link">Blogs</a>
               </li>
               <li class="nav-item">
-                <a href="Contactus.html" class="nav-link text-dark"
-                  >Contact Us</a
-                >
+                <a href="register.html" class="nav-link">Register</a>
+              </li>
+              <li class="nav-item">
+                <a href="Contactus.html" class="nav-link">Contact Us</a>
               </li>
             </ul>
           </div>
