--- a/public/FaQ's.html
+++ b/public/FaQ's.html
@@ -52,20 +52,20 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="about.css" />
-    
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript
-        ><iframe
-          src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
-          height="0"
-          width="0"
-          style="display: none; visibility: hidden"
-        ></iframe
-      ></noscript>
-      <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -115,7 +115,12 @@
                 <a href="FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link">Skill Development Training</a>
+                <a href="training.html" class="nav-link"
+                  >Skill Development Training</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="Blogs.html" class="nav-link">Blogs</a>
               </li>
               <li class="nav-item">
                 <a href="register.html" class="nav-link">Register</a>
@@ -384,7 +389,7 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="col-md-6">
               <div class="accordion-item m-2">
                 <h2 class="accordion-header">
@@ -536,39 +541,39 @@
               </div>
             </div>
             <div class="col-md-6">
-                <div class="accordion-item m-2">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#collapseNine"
-                      aria-expanded="false"
-                      aria-controls="collapseNine"
-                    >
-                      <h5>
-                        We are worried about quality; how do you assure solid
-                        projects?
-                      </h5>
-                    </button>
-                  </h2>
-                  <div
-                    id="collapseNine"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#accordionExample"
+              <div class="accordion-item m-2">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseNine"
+                    aria-expanded="false"
+                    aria-controls="collapseNine"
                   >
-                    <div class="accordion-body">
-                      <p>
-                        Our developers are dedicated to producing quality code. We
-                        have formal processes to keep quality under tight control,
-                        including periodic code reviews and design walk-throughs.
-                        We concentrate on being first-time right, and believe the
-                        creation-step itself should be strong.
-                      </p>
-                    </div>
+                    <h5>
+                      We are worried about quality; how do you assure solid
+                      projects?
+                    </h5>
+                  </button>
+                </h2>
+                <div
+                  id="collapseNine"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Our developers are dedicated to producing quality code. We
+                      have formal processes to keep quality under tight control,
+                      including periodic code reviews and design walk-throughs.
+                      We concentrate on being first-time right, and believe the
+                      creation-step itself should be strong.
+                    </p>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
 
           <!--  -->
@@ -669,18 +674,15 @@
               <div class="col-4 footer-col">
                 <h5>Reach Out To Us</h5>
                 <ul>
-                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
-                  </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +91 88376 54161
+                    <i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
-                  <li>
-                    <i class="fa-solid fa-phone"></i> +91 82647 54342
-                  </li>
+                  <li><i class="fa-solid fa-phone"></i> +91 88376 54161</li>
+                  <li><i class="fa-solid fa-phone"></i> +91 82647 54342</li>
                 </ul>
               </div>
               <div class="col-4 footer-col">
-                <h5 >Quick Links</h5>
+                <h5>Quick Links</h5>
                 <ul class="quick-links">
                   <li>
                     <a href="Contactus.html">Contact Us</a>
