--- a/public/it-solution.html
+++ b/public/it-solution.html
@@ -115,7 +115,12 @@
                 <a href="FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link">Skill Development Training</a>
+                <a href="training.html" class="nav-link"
+                  >Skill Development Training</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="Blogs.html" class="nav-link">Blogs</a>
               </li>
               <li class="nav-item">
                 <a href="register.html" class="nav-link">Register</a>
