--- a/public/training.html
+++ b/public/training.html
@@ -131,6 +131,9 @@
                 >
               </li>
               <li class="nav-item">
+                <a href="Blogs.html" class="nav-link">Blogs</a>
+              </li>
+              <li class="nav-item">
                 <a href="register.html" class="nav-link">Register</a>
               </li>
               <li class="nav-item">
