Enquiry Page added

--- a/public/Contactus.html
+++ b/public/Contactus.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DJ9LRF5XW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1DJ9LRF5XW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-1DJ9LRF5XW');
-</script>
+      gtag("config", "G-1DJ9LRF5XW");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -60,16 +65,16 @@
     </style>
   </head>
   <body>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript
-        ><iframe
-          src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
-          height="0"
-          width="0"
-          style="display: none; visibility: hidden"
-        ></iframe
-      ></noscript>
-      <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PBC9KP87"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -248,7 +253,9 @@
                     />
                   </div>
                   <div class="mb-3">
-                    <label for="mobile" class="form-label">Your Mobile No.</label>
+                    <label for="mobile" class="form-label"
+                      >Your Mobile No.</label
+                    >
                     <input
                       type="tel"
                       class="form-control"
@@ -308,24 +315,24 @@
               <div class="col-4 footer-col">
                 <h5>Reach Out To Us</h5>
                 <ul>
-                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
-                  </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +91 88376 54161
+                    <i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
-                  <li>
-                    <i class="fa-solid fa-phone"></i> +91 82647 54342
-                  </li>
+                  <li><i class="fa-solid fa-phone"></i> +91 88376 54161</li>
+                  <li><i class="fa-solid fa-phone"></i> +91 82647 54342</li>
                 </ul>
               </div>
               <div class="col-4 footer-col">
-                <h5 >Quick Links</h5>
+                <h5>Quick Links</h5>
                 <ul class="quick-links">
                   <li>
                     <a href="Contactus.html">Contact Us</a>
                   </li>
                   <li>
                     <a href="about.html">About us</a>
+                  </li>
+                  <li>
+                    <a href="Counsling.html">Enquiry</a>
                   </li>
                   <li>
                     <a href="FaQ's.html">Frequently Asked Questions</a>
@@ -392,7 +399,7 @@
               console.log("Data from server:", data);
               if (data.success) {
                 alert("Query Submitted! We will reach out to you shortly!");
-                window.location.reload()
+                window.location.reload();
               } else {
                 alert("Something Went Wrong!");
               }
