--- a/public/FaQ's.html
+++ b/public/FaQ's.html
@@ -691,6 +691,9 @@
                     <a href="about.html">About us</a>
                   </li>
                   <li>
+                    <a href="Counsling.html">Enquiry</a>
+                  </li>
+                  <li>
                     <a href="FaQ's.html">Frequently Asked Questions</a>
                   </li>
                 </ul>
