--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DJ9LRF5XW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1DJ9LRF5XW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-1DJ9LRF5XW');
-</script>
+      gtag("config", "G-1DJ9LRF5XW");
+    </script>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -873,6 +878,9 @@
                   </li>
                   <li>
                     <a href="about.html">About us</a>
+                  </li>
+                  <li>
+                    <a href="Counsling.html">Enquiry</a>
                   </li>
                   <li>
                     <a href="FaQ's.html">Frequently Asked Questions</a>
