--- a/public/Counsling.html
+++ b/public/Counsling.html
@@ -434,9 +434,13 @@
             window.alert("Missing Input Fields");
           } else {
             const response = await fetch(
-              "https://www.anshinfotech.org/api/student-enquiry",
+              // "https://www.anshinfotech.org/api/student-enquiry",
+              "http://localhost:3000/api/student-enquiry",
               {
                 method: "POST",
+                headers: {
+                  "Content-Type": "application/json", // Add this header
+                },
                 body: JSON.stringify({
                   name,
                   fatherName,
