--- a/public/Counsling.html
+++ b/public/Counsling.html
@@ -265,12 +265,26 @@
         </div>
 
         <div class="row mb-3">
+          <label for="enq-for" class="col-sm-2 col-form-label"
+            >Enquiry For</label
+          >
+          <div class="col-sm-10">
+            <select class="form-select" id="enq-for" required>
+              <option value="" disabled selected>Select Field</option>
+              <option value="Internship">Internship</option>
+              <option value="Training">Training</option>
+              <option value="Other">Other</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row mb-3">
           <label for="course" class="col-sm-2 col-form-label"
             >Enquiry for</label
           >
           <div class="col-sm-10">
             <select class="form-select" id="course" required>
-              <option value="" disabled selected>Enquiry for</option>
+              <option value="" disabled selected>Select Domain</option>
               <option value="Web Development">Web Development</option>
               <option value="Mobile Application Development">
                 Mobile Application Development
@@ -279,6 +293,7 @@
                 Artificial Intelligence
               </option>
               <option value="Machine Learning">Machine Learning</option>
+              <option value="Machine Learning">Cyber Security</option>
               <option value="Data Analytics">Data Analytics</option>
               <option value="Graphic Designing">Graphic Designing</option>
               <option value="Digital Marketing">Digital Marketing</option>
@@ -411,12 +426,14 @@
           const motherName = document.getElementById("motherName").value;
           const mobile = document.getElementById("mobile").value;
           const altmobile = document.getElementById("altMobile").value;
+          const enqFor = document.getElementById("enq-for").value;
           const dob = document.getElementById("dob").value;
           const email = document.getElementById("email").value;
           const gender = document.getElementById("gender").value;
           const batchTime = document.getElementById("batchTime").value;
           const course = document.getElementById("course").value;
           const review = document.getElementById("review").value;
+          const address = document.getElementById("address").value;
 
           if (
             !name ||
@@ -429,7 +446,9 @@
             !gender ||
             !batchTime ||
             !course ||
-            !review
+            !review ||
+            !enqFor ||
+            !address
           ) {
             window.alert("Missing Input Fields");
           } else {
@@ -452,6 +471,8 @@
                   batchTime,
                   course,
                   review,
+                  enqFor,
+                  address,
                 }),
               }
             );
