--- a/public/Counsling.html
+++ b/public/Counsling.html
@@ -10,7 +10,7 @@
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
+        f.parentNode.insertBefore(j,f);
       })(window, document, "script", "dataLayer", "GTM-PBC9KP87");
     </script>
     <!-- End Google Tag Manager -->
@@ -273,6 +273,7 @@
               <option value="" disabled selected>Select Field</option>
               <option value="Internship">Internship</option>
               <option value="Training">Training</option>
+              <option value="Employment">Employment</option>
               <option value="Other">Other</option>
             </select>
           </div>
@@ -280,7 +281,7 @@
 
         <div class="row mb-3">
           <label for="course" class="col-sm-2 col-form-label"
-            >Enquiry for</label
+            >Interested Domain</label
           >
           <div class="col-sm-10">
             <select class="form-select" id="course" required>
@@ -289,11 +290,14 @@
               <option value="Mobile Application Development">
                 Mobile Application Development
               </option>
+              <option value="Desktop Application Development">
+                Desktop Application Development
+              </option>
               <option value="Artificial Intelligence">
                 Artificial Intelligence
               </option>
               <option value="Machine Learning">Machine Learning</option>
-              <option value="Machine Learning">Cyber Security</option>
+              <option value="Cyber Security">Cyber Security</option>
               <option value="Data Analytics">Data Analytics</option>
               <option value="Graphic Designing">Graphic Designing</option>
               <option value="Digital Marketing">Digital Marketing</option>
