--- a/public/admin.html
+++ b/public/admin.html
@@ -187,7 +187,7 @@
           </a>
         </div>
         <div class="col-md-3 mb-1" id="showregistercard">
-          <a href="CousData.html">
+          <a href="/api/admin/enquiry-data">
             <div class="card" style="width: 18rem">
               <img
                 src="https://images.unsplash.com/photo-1556155092-490a1ba16284?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
